--- a/action.yml
+++ b/action.yml
@@ -53,7 +53,7 @@ runs:
       id: gen-diff
       shell: bash
       env:
-        PATTERN: ${{ inputs.directory }}
+        PATTERN: ${{ inputs.pattern }}
         STARTING_COMMIT: ${{ inputs.starting-commit }}
         ENDING_COMMIT: ${{ inputs.ending-commit }}
         DIRECTORY: ${{ inputs.directory }}
