--- a/action.yml
+++ b/action.yml
@@ -62,7 +62,7 @@ runs:
       run: rm diff.patch
 
     - uses: actions/github-script@v7
-      if: ${{ github.event_name != 'pull_request' && inputs.post-comment-on-pr == 'true' }}
+      if: ${{ github.event_name == 'pull_request' && inputs.post-comment-on-pr == 'true' }}
       with:
         github-token: ${{ github.token }}
         script: |
