--- a/.github/workflows/web-demo.yml
+++ b/.github/workflows/web-demo.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: 'docker/compose'
+          repository: 'dhth/hours'
           path: 'repo'
           fetch-depth: 20
 
@@ -29,8 +29,8 @@ jobs:
         id: get-starting-commit
         working-directory: repo
         run: |
-          echo "commit-short=$(git rev-parse --short HEAD~5)" >> $GITHUB_OUTPUT
-          echo "commit=$(git rev-parse HEAD~5)" >> $GITHUB_OUTPUT
+          echo "commit-short=$(git rev-parse --short HEAD~10)" >> $GITHUB_OUTPUT
+          echo "commit=$(git rev-parse HEAD~10)" >> $GITHUB_OUTPUT
 
       - name: Get ending commit
         id: get-ending-commit
@@ -54,8 +54,6 @@ jobs:
 
       - uses: actions/setup-node@v4
         if: ${{ steps.get-dstlled-diff.outputs.diff != 'No changes detected.' }}
-        env:
-          DIFF: ${{ steps.get-dstlled-diff.outputs.diff }}
         with:
           node-version: '20.x'
 
