--- a/.github/workflows/web-demo.yml
+++ b/.github/workflows/web-demo.yml
@@ -21,9 +21,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: 'dhth/hours'
+          repository: 'docker/compose'
           path: 'repo'
-          fetch-depth: 20
+          fetch-depth: 10
 
       - name: Get starting commit
         id: get-starting-commit
@@ -47,23 +47,18 @@ jobs:
           starting-commit: ${{ steps.get-starting-commit.outputs.commit }}
           ending-commit: ${{ steps.get-ending-commit.outputs.commit }}
 
-      - run: echo "$DIFF"
-        id: debug
-        env:
-          DIFF: ${{ steps.get-dstlled-diff.outputs.diff }}
-
       - uses: actions/setup-node@v4
-        if: ${{ steps.get-dstlled-diff.outputs.diff != 'No changes detected.' }}
+        if: ${{ steps.get-dstlled-diff.outputs.diff != 'No changes detected' }}
         with:
           node-version: '20.x'
 
       - name: Install diff2html-cli
-        if: ${{ steps.get-dstlled-diff.outputs.diff != 'No changes detected.' }}
+        if: ${{ steps.get-dstlled-diff.outputs.diff != 'No changes detected' }}
         run: |
           npm install -g diff2html-cli
 
       - name: Generate webpage
-        if: ${{ steps.get-dstlled-diff.outputs.diff != 'No changes detected.' }}
+        if: ${{ steps.get-dstlled-diff.outputs.diff != 'No changes detected' }}
         env:
           DIFF: ${{ steps.get-dstlled-diff.outputs.diff }}
         run: |
@@ -71,7 +66,7 @@ jobs:
           echo "$DIFF" | diff2html --input stdin --title "dstlled-diff for docker/compose (${{ steps.get-starting-commit.outputs.commit-short }}..${{ steps.get-ending-commit.outputs.commit-short }} -- ${PATTERN})" --file docs/index.html
 
       - name: Upload artifact
-        if: ${{ steps.get-dstlled-diff.outputs.diff != 'No changes detected.' }}
+        if: ${{ steps.get-dstlled-diff.outputs.diff != 'No changes detected' }}
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./docs
